--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-/MyTaxiModel
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+
+.project
+*.pydevproject
+.metadata
+.gradle
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
